docs/api/qiskit/0.37/qiskit.circuit.library.Measure.mdx
---
title: Measure (v0.37)
description: API reference for qiskit.circuit.library.Measure in qiskit v0.37
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.Measure
---

# Measure

<Class id="qiskit.circuit.library.Measure" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.21/qiskit/circuit/measure.py" signature="Measure" modifiers="class">
  Bases: [`qiskit.circuit.instruction.Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")

  Quantum measurement in the computational basis.

  Create new measurement instruction.

  ## Methods

  <span id="qiskit-circuit-library-measure-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.Measure.add_decomposition" signature="Measure.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="qiskit-circuit-library-measure-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.Measure.assemble" signature="Measure.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="qiskit-circuit-library-measure-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.Measure.broadcast_arguments" signature="Measure.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="qiskit-circuit-library-measure-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.Measure.c_if" signature="Measure.c_if(classical, val)">
    Set a classical equality condition on this instruction between the register or cbit `classical` and value `val`.

    <Admonition title="Note" type="note">
      This is a setter method, not an additive one. Calling this multiple times will silently override any previously set condition; it does not stack.
    </Admonition>
  </Function>

  <span id="qiskit-circuit-library-measure-copy" />

  ### copy

  <Function id="qiskit.circuit.library.Measure.copy" signature="Measure.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-library-measure-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.Measure.inverse" signature="Measure.inverse()">
    Invert this instruction.

    If the instruction is composite (i.e. has a definition), then its definition will be recursively inverted.

    Special instructions inheriting from Instruction can implement their own inverse (e.g. T and Tdg, Barrier, etc.)

    **Returns**

    a fresh instruction for the inverse

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – if the instruction is not composite and an inverse has not been implemented for it.
  </Function>

  <span id="qiskit-circuit-library-measure-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.Measure.is_parameterized" signature="Measure.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="qiskit-circuit-library-measure-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.Measure.qasm" signature="Measure.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="qiskit-circuit-library-measure-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.Measure.repeat" signature="Measure.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="qiskit-circuit-library-measure-reverse-ops" />

  ### reverse\_ops

  <Function id="qiskit.circuit.library.Measure.reverse_ops" signature="Measure.reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="qiskit-circuit-library-measure-soft-compare" />

  ### soft\_compare

  <Function id="qiskit.circuit.library.Measure.soft_compare" signature="Measure.soft_compare(other)">
    Soft comparison between gates. Their names, number of qubits, and classical bit numbers must match. The number of parameters must match. Each parameter is compared. If one is a ParameterExpression then it is not taken into account.

    **Parameters**

    **other** (*instruction*) – other instruction.

    **Returns**

    are self and other equal up to parameter expressions.

    **Return type**

    bool
  </Function>

  <span id="qiskit-circuit-library-measure-validate-parameter" />

  ### validate\_parameter

  <Function id="qiskit.circuit.library.Measure.validate_parameter" signature="Measure.validate_parameter(parameter)">
    Instruction parameters has no validation or normalization.
  </Function>

  ## Attributes

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.Measure.condition_bits">
    Get Clbits in condition.

    **Return type**

    `List`\[[`Clbit`](qiskit.circuit.Clbit "qiskit.circuit.classicalregister.Clbit")]
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.Measure.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.Measure.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.Measure.duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.Measure.label">
    Return instruction label

    **Return type**

    `str`
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.Measure.name">
    Return the name.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.Measure.num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.Measure.num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.Measure.params">
    return instruction params.
  </Attribute>

  ### unit

  <Attribute id="qiskit.circuit.library.Measure.unit">
    Get the time unit of duration.
  </Attribute>
</Class>

